force-app/main/default/objects/Ecosystem__c/Ecosystem__c.object-meta.xml
<CustomObject>
    <description>A custom object used to track current and future state systems for a particular Account.</description>
    <label>Ecosystem</label>
    <nameField>
        <label>Ecosystem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ecosystem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>