force-app/main/default/objects/Ecosystem__c/fields/Billing_and_Collections__c.field-meta.xml
<CustomField>
    <fullName>Billing_and_Collections__c</fullName>
    <label>Billing and Collections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Aria</fullName>
            </value>
            <value>
                <fullName>Deltek</fullName>
            </value>
            <value>
                <fullName>FinancialForce</fullName>
            </value>
            <value>
                <fullName>FreshBooks</fullName>
            </value>
            <value>
                <fullName>GoTransverse</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>Monexa</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Sage 300 (AccPac)</fullName>
            </value>
            <value>
                <fullName>Salesforce Billing</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Vindicia</fullName>
            </value>
            <value>
                <fullName>Zuora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>