force-app/main/default/objects/Ecosystem__c/fields/Business_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Business_Intelligence__c</fullName>
    <label>Business Intelligence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Anypoint Platform</fullName>
            </value>
            <value>
                <fullName>Birst</fullName>
            </value>
            <value>
                <fullName>Cloudera</fullName>
            </value>
            <value>
                <fullName>Domo</fullName>
            </value>
            <value>
                <fullName>GreenPlum</fullName>
            </value>
            <value>
                <fullName>Hadoop</fullName>
            </value>
            <value>
                <fullName>IBM Cognos Analytics</fullName>
            </value>
            <value>
                <fullName>Jitterbit</fullName>
            </value>
            <value>
                <fullName>Microsoft Power BI</fullName>
            </value>
            <value>
                <fullName>MicroStrategy</fullName>
            </value>
            <value>
                <fullName>MS SQL</fullName>
            </value>
            <value>
                <fullName>Oracle BI</fullName>
            </value>
            <value>
                <fullName>Oracle Exadata</fullName>
            </value>
            <value>
                <fullName>Pentaho</fullName>
            </value>
            <value>
                <fullName>PieSync</fullName>
            </value>
            <value>
                <fullName>Pig</fullName>
            </value>
            <value>
                <fullName>QlikView</fullName>
            </value>
            <value>
                <fullName>Salesforce Analytics</fullName>
            </value>
            <value>
                <fullName>SAP Crystal Reports</fullName>
                <label>SAP Crystal Reports</label>
            </value>
            <value>
                <fullName>SAP HANA</fullName>
            </value>
            <value>
                <fullName>Sisense</fullName>
            </value>
            <value>
                <fullName>SQL Server</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>Talend</fullName>
            </value>
            <value>
                <fullName>Teradata</fullName>
            </value>
            <value>
                <fullName>Vertica</fullName>
            </value>
            <value>
                <fullName>webMethods</fullName>
            </value>
            <value>
                <fullName>Zapier</fullName>
            </value>
            <value>
                <fullName>Zendesk Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>