force-app/main/default/objects/Ecosystem__c/fields/Commissions__c.field-meta.xml
<CustomField>
    <fullName>Commissions__c</fullName>
    <description>Commission Engine</description>
    <inlineHelpText>Commission Engine</inlineHelpText>
    <label>Commissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Xactly</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>CallidusCloud</fullName>
            </value>
            <value>
                <fullName>Synygy</fullName>
            </value>
            <value>
                <fullName>Varicent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>