force-app/main/default/objects/Ecosystem__c/fields/CPQ__c.field-meta.xml
<CustomField>
    <fullName>CPQ__c</fullName>
    <label>CPQ</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Apparound</fullName>
            </value>
            <value>
                <fullName>Apttus</fullName>
            </value>
            <value>
                <fullName>Blueprint CPQ</fullName>
            </value>
            <value>
                <fullName>Callidus Cloud</fullName>
            </value>
            <value>
                <fullName>Cincom CPQ</fullName>
            </value>
            <value>
                <fullName>CloudSense</fullName>
            </value>
            <value>
                <fullName>Configure One</fullName>
            </value>
            <value>
                <fullName>ConnectWise Sell</fullName>
            </value>
            <value>
                <fullName>EndeavorCPQ</fullName>
            </value>
            <value>
                <fullName>Eos CPQ</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Experlogix</fullName>
            </value>
            <value>
                <fullName>FPX CPQ</fullName>
            </value>
            <value>
                <fullName>KBMax 3D CPQ</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>Oracle CPQ</fullName>
            </value>
            <value>
                <fullName>PandaDoc</fullName>
            </value>
            <value>
                <fullName>PROS Smart CPQ</fullName>
            </value>
            <value>
                <fullName>QuoteBooks</fullName>
            </value>
            <value>
                <fullName>QuoteWerks</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ</fullName>
            </value>
            <value>
                <fullName>Sole CPQ</fullName>
            </value>
            <value>
                <fullName>Tacton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>