force-app/main/default/objects/Ecosystem__c/fields/CRM_Customer_Initiated_Interactions__c.field-meta.xml
<CustomField>
    <fullName>CRM_Customer_Initiated_Interactions__c</fullName>
    <label>CRM: Customer Initiated Interactions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Avangate</fullName>
            </value>
            <value>
                <fullName>Demandware</fullName>
            </value>
            <value>
                <fullName>Digital River</fullName>
            </value>
            <value>
                <fullName>Elasticpath</fullName>
            </value>
            <value>
                <fullName>Episerver Digtial Commerce</fullName>
            </value>
            <value>
                <fullName>Hybris Software</fullName>
            </value>
            <value>
                <fullName>IBM Digital Commerce</fullName>
            </value>
            <value>
                <fullName>IBM WebSphere Commerce</fullName>
            </value>
            <value>
                <fullName>Magento CE</fullName>
            </value>
            <value>
                <fullName>Oracle Commerce</fullName>
            </value>
            <value>
                <fullName>Salesforce Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>SAP Hybris Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>