force-app/main/default/objects/Ecosystem__c/fields/CRM_Customer_Success_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>CRM_Customer_Success_Call_Center__c</fullName>
    <label>CRM: Customer Success | Call Center</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>8x8 Cloud Contact Center</fullName>
            </value>
            <value>
                <fullName>Accelo</fullName>
            </value>
            <value>
                <fullName>Adestra</fullName>
            </value>
            <value>
                <fullName>Aircall</fullName>
            </value>
            <value>
                <fullName>AT&amp;T Contact Center</fullName>
            </value>
            <value>
                <fullName>BlueNose</fullName>
            </value>
            <value>
                <fullName>BT Contact Center</fullName>
            </value>
            <value>
                <fullName>Calabrio ONE</fullName>
            </value>
            <value>
                <fullName>Call Center for Skype</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>ChurnZero</fullName>
            </value>
            <value>
                <fullName>Cisco Unified Contact Center</fullName>
            </value>
            <value>
                <fullName>ClientSuccess</fullName>
            </value>
            <value>
                <fullName>Constant Contact</fullName>
            </value>
            <value>
                <fullName>Evergage</fullName>
            </value>
            <value>
                <fullName>Gainsight</fullName>
            </value>
            <value>
                <fullName>Goggles</fullName>
            </value>
            <value>
                <fullName>inContact Cloud Center Software</fullName>
            </value>
            <value>
                <fullName>MindTouch</fullName>
            </value>
            <value>
                <fullName>Natero</fullName>
            </value>
            <value>
                <fullName>Panterra Cloud Contact Center</fullName>
            </value>
            <value>
                <fullName>RingCentral Office</fullName>
            </value>
            <value>
                <fullName>Service Source</fullName>
            </value>
            <value>
                <fullName>Talkdesk</fullName>
            </value>
            <value>
                <fullName>Totango</fullName>
            </value>
            <value>
                <fullName>UserIQ</fullName>
            </value>
            <value>
                <fullName>Verizon Contact Center Solutions</fullName>
            </value>
            <value>
                <fullName>West Unified Communications</fullName>
            </value>
            <value>
                <fullName>Whatfix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>