force-app/main/default/objects/Ecosystem__c/fields/CRM_Partner_Management__c.field-meta.xml
<CustomField>
    <fullName>CRM_Partner_Management__c</fullName>
    <label>CRM: Partner Management</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Agentcis</fullName>
            </value>
            <value>
                <fullName>Allbound</fullName>
            </value>
            <value>
                <fullName>BasisPoint</fullName>
            </value>
            <value>
                <fullName>Blueroads</fullName>
            </value>
            <value>
                <fullName>Channeltivity</fullName>
            </value>
            <value>
                <fullName>Entomo</fullName>
            </value>
            <value>
                <fullName>IBM B2B Collaboration</fullName>
            </value>
            <value>
                <fullName>Impartner PRM</fullName>
            </value>
            <value>
                <fullName>Magentrix PRM</fullName>
            </value>
            <value>
                <fullName>Mindmatrix</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>PartnerPath</fullName>
            </value>
            <value>
                <fullName>PartnerPortal</fullName>
            </value>
            <value>
                <fullName>Relayware</fullName>
            </value>
            <value>
                <fullName>Salesforce Community Cloud</fullName>
            </value>
            <value>
                <fullName>Scalus</fullName>
            </value>
            <value>
                <fullName>ZINFI</fullName>
            </value>
            <value>
                <fullName>Zyme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>