force-app/main/default/objects/Ecosystem__c/fields/CRM_SFA__c.field-meta.xml
<CustomField>
    <fullName>CRM_SFA__c</fullName>
    <label>CRM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Sugar CRM</fullName>
            </value>
            <value>
                <fullName>Netsuite</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>Infor</fullName>
            </value>
            <value>
                <fullName>Zoho</fullName>
            </value>
            <value>
                <fullName>SAP CRM</fullName>
            </value>
            <value>
                <fullName>Oracle Siebel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>