force-app/main/default/objects/Ecosystem__c/fields/Ecosystem_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ecosystem_Additional_Notes__c</fullName>
    <label>Ecosystem Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>