force-app/main/default/objects/Ecosystem__c/fields/eSignature__c.field-meta.xml
<CustomField>
    <fullName>eSignature__c</fullName>
    <label>eSignature</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adobe Sign</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>