force-app/main/default/objects/Ecosystem__c/fields/Financial_Management_and_RevRec__c.field-meta.xml
<CustomField>
    <fullName>Financial_Management_and_RevRec__c</fullName>
    <label>Financial Management and RevRec</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Deltek</fullName>
            </value>
            <value>
                <fullName>FinancialForce</fullName>
            </value>
            <value>
                <fullName>Infor</fullName>
            </value>
            <value>
                <fullName>Intacct</fullName>
            </value>
            <value>
                <fullName>Leeyo</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Oracle Financial Services</fullName>
            </value>
            <value>
                <fullName>Peoplesoft</fullName>
            </value>
            <value>
                <fullName>QuickBooks</fullName>
            </value>
            <value>
                <fullName>RevStream</fullName>
            </value>
            <value>
                <fullName>Sage 300 (AccPac)</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>ServiceSource</fullName>
            </value>
            <value>
                <fullName>SoftTrax</fullName>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
            <value>
                <fullName>Zuora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>