force-app/main/default/objects/Ecosystem__c/fields/Invoice_Finishing_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finishing_Delivery__c</fullName>
    <label>Invoice Finishing &amp; Delivery</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Ariba</fullName>
            </value>
            <value>
                <fullName>Billtrust</fullName>
            </value>
            <value>
                <fullName>Billy</fullName>
            </value>
            <value>
                <fullName>Concur</fullName>
            </value>
            <value>
                <fullName>Conga</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Netsuite</fullName>
            </value>
            <value>
                <fullName>OpenText</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>OSG</fullName>
            </value>
            <value>
                <fullName>Pitney Bowes</fullName>
            </value>
            <value>
                <fullName>Sage 300 (AccPac)</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Workbooks.com</fullName>
            </value>
            <value>
                <fullName>Zoho Invoice</fullName>
            </value>
            <value>
                <fullName>Zuora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>