force-app/main/default/objects/Ecosystem__c/fields/Lockbox__c.field-meta.xml
<CustomField>
    <fullName>Lockbox__c</fullName>
    <description>Bank Lockbox Service</description>
    <inlineHelpText>Bank Lockbox Service</inlineHelpText>
    <label>Lockbox</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>BBT</fullName>
            </value>
            <value>
                <fullName>Chase</fullName>
            </value>
            <value>
                <fullName>Comerica</fullName>
            </value>
            <value>
                <fullName>TD Ameritrade</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>US Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>