force-app/main/default/objects/Ecosystem__c/fields/Marketing_Automation__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Automation__c</fullName>
    <label>Marketing Automation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>ActiveCampaign</fullName>
            </value>
            <value>
                <fullName>Act-On</fullName>
            </value>
            <value>
                <fullName>Adestra</fullName>
            </value>
            <value>
                <fullName>Adobe Campaign</fullName>
            </value>
            <value>
                <fullName>Autopilot</fullName>
            </value>
            <value>
                <fullName>ClickDimensions</fullName>
            </value>
            <value>
                <fullName>DSS (Dynamic Self Syndication)</fullName>
            </value>
            <value>
                <fullName>Exponea</fullName>
            </value>
            <value>
                <fullName>Hubspot</fullName>
            </value>
            <value>
                <fullName>iContact Pro</fullName>
            </value>
            <value>
                <fullName>Informz</fullName>
            </value>
            <value>
                <fullName>Intercom</fullName>
            </value>
            <value>
                <fullName>LeadSquared</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>Maropost Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Real Magnet</fullName>
            </value>
            <value>
                <fullName>SharpSpring</fullName>
            </value>
            <value>
                <fullName>ThriveHive</fullName>
            </value>
            <value>
                <fullName>Vbout.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>