force-app/main/default/objects/Ecosystem__c/fields/Middleware_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Middleware_Connectivity__c</fullName>
    <label>Middleware | Connectivity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Anypoint Platform</fullName>
            </value>
            <value>
                <fullName>Appian</fullName>
            </value>
            <value>
                <fullName>Dell Boomi</fullName>
            </value>
            <value>
                <fullName>IBM BPM</fullName>
            </value>
            <value>
                <fullName>Informatica</fullName>
            </value>
            <value>
                <fullName>Jitterbit</fullName>
            </value>
            <value>
                <fullName>MicrosoftAzure BizTalk</fullName>
            </value>
            <value>
                <fullName>Oracle BPM</fullName>
            </value>
            <value>
                <fullName>Pega 7 Platform</fullName>
            </value>
            <value>
                <fullName>SnapLogic</fullName>
            </value>
            <value>
                <fullName>SQL Server</fullName>
            </value>
            <value>
                <fullName>Talend</fullName>
            </value>
            <value>
                <fullName>TIBCO ActiveMatrixBPM</fullName>
            </value>
            <value>
                <fullName>webMethods</fullName>
            </value>
            <value>
                <fullName>Zapier</fullName>
            </value>
            <value>
                <fullName>Zendesk Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>