force-app/main/default/objects/Ecosystem__c/fields/Monetization_Operations__c.field-meta.xml
<CustomField>
    <fullName>Monetization_Operations__c</fullName>
    <label>Monetization Operations</label>
    <type>TextArea</type>
</CustomField>