force-app/main/default/objects/Ecosystem__c/fields/Order_Contract_Management__c.field-meta.xml
<CustomField>
    <fullName>Order_Contract_Management__c</fullName>
    <label>Order &amp; Contract Management</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Adobe Echosign</fullName>
            </value>
            <value>
                <fullName>Apttus</fullName>
            </value>
            <value>
                <fullName>Ariba</fullName>
            </value>
            <value>
                <fullName>Callidus Cloud</fullName>
            </value>
            <value>
                <fullName>Conga Contracts</fullName>
            </value>
            <value>
                <fullName>Contract Works</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Legalesign</fullName>
            </value>
            <value>
                <fullName>Netsuite</fullName>
            </value>
            <value>
                <fullName>Octiv</fullName>
            </value>
            <value>
                <fullName>Paperless Proposal</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ</fullName>
            </value>
            <value>
                <fullName>SpringCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>