force-app/main/default/objects/Ecosystem__c/fields/Payment_Processing__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processing__c</fullName>
    <label>Payment Processing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Amazong Payments</fullName>
            </value>
            <value>
                <fullName>Authorize.net</fullName>
            </value>
            <value>
                <fullName>Braintree Payments</fullName>
            </value>
            <value>
                <fullName>Chase Paymentech</fullName>
            </value>
            <value>
                <fullName>CyberSource</fullName>
            </value>
            <value>
                <fullName>Moneris</fullName>
            </value>
            <value>
                <fullName>Orbital Payment Gateway</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Vantiv</fullName>
            </value>
            <value>
                <fullName>Zuora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>