force-app/main/default/objects/Ecosystem__c/fields/Product_Catalog_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalog_Maintenance__c</fullName>
    <label>Product Catalog Maintenance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>IBM InfoSphere</fullName>
            </value>
            <value>
                <fullName>Informatica</fullName>
            </value>
            <value>
                <fullName>Oracle MDM</fullName>
            </value>
            <value>
                <fullName>SurveyMonkey</fullName>
            </value>
            <value>
                <fullName>Talend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>