force-app/main/default/objects/Ecosystem__c/fields/Service_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery__c</fullName>
    <label>Service Delivery</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Accelo</fullName>
            </value>
            <value>
                <fullName>Amazon VPC</fullName>
            </value>
            <value>
                <fullName>Amdocs</fullName>
            </value>
            <value>
                <fullName>Autotask</fullName>
            </value>
            <value>
                <fullName>Avaza</fullName>
            </value>
            <value>
                <fullName>Bandwidth.com</fullName>
            </value>
            <value>
                <fullName>BigTime</fullName>
            </value>
            <value>
                <fullName>BlueJeans</fullName>
            </value>
            <value>
                <fullName>Brightpearl</fullName>
            </value>
            <value>
                <fullName>Clarizen</fullName>
            </value>
            <value>
                <fullName>Cloud Stack</fullName>
            </value>
            <value>
                <fullName>ConnectWise Manage</fullName>
            </value>
            <value>
                <fullName>Ericsson</fullName>
            </value>
            <value>
                <fullName>FinancialForce</fullName>
            </value>
            <value>
                <fullName>FinancialForce PSA</fullName>
            </value>
            <value>
                <fullName>GreenRope</fullName>
            </value>
            <value>
                <fullName>Kimble</fullName>
            </value>
            <value>
                <fullName>Kimble PSA</fullName>
            </value>
            <value>
                <fullName>Mavenlink</fullName>
            </value>
            <value>
                <fullName>MaxCDN</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP</fullName>
            </value>
            <value>
                <fullName>Miva</fullName>
            </value>
            <value>
                <fullName>Neo4j</fullName>
            </value>
            <value>
                <fullName>NetCracker</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>OpenAir PSA</fullName>
            </value>
            <value>
                <fullName>Oracle IT Service Managment Suite</fullName>
            </value>
            <value>
                <fullName>Replicon</fullName>
            </value>
            <value>
                <fullName>SAP Hybris Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>